<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="30dp"
    tools:context=".SignUpFragment">


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="250dp"
        android:layout_height="180dp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/colorBlack"
        android:textSize="18dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:layout_constraintLeft_toLeftOf="parent"></TextView>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        app:layout_constraintLeft_toLeftOf="parent"></EditText>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/colorBlack"
        android:textSize="18dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        app:layout_constraintLeft_toLeftOf="parent"></TextView>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:layout_constraintLeft_toLeftOf="parent"></EditText>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/colorBlack"
        android:textSize="18dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintLeft_toLeftOf="parent"></TextView>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        app:layout_constraintLeft_toLeftOf="parent"></EditText>


    <TextView
        android:id="@+id/tv_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textColor="@color/colorBlack"
        android:textSize="18dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintLeft_toLeftOf="parent"></TextView>

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirm_password"
        app:layout_constraintLeft_toLeftOf="parent"></EditText>


    <Button
        android:id="@+id/bt_sign_up"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="15dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/black_round_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_confirm_password"></Button>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_sign_up"
        >

        <TextView
            android:id="@+id/tv_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:layout_margin="35dp"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/bt_save"
            app:layout_constraintLeft_toLeftOf="parent"></TextView>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/bt_login"
            app:layout_constraintLeft_toRightOf="@+id/tv_have_account"></TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>