<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_email"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorBlack"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:layout_constraintLeft_toLeftOf="parent"></TextView>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:padding="8dp"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        app:layout_constraintLeft_toLeftOf="parent"></EditText>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_margin="35dp"
        android:textColor="@color/colorBlack"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        app:layout_constraintLeft_toLeftOf="parent"></TextView>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:padding="8dp"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        app:layout_constraintLeft_toLeftOf="parent"></EditText>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login"
        >

    <TextView
        android:id="@+id/tv_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_account"
        android:layout_margin="35dp"
        android:textColor="@color/colorBlack"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_login"
        app:layout_constraintLeft_toLeftOf="parent"></TextView>

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginLeft="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/bt_login"
        app:layout_constraintLeft_toRightOf="@+id/tv_no_account"></TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/bt_login"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="15dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/black_round_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>