<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddNewTenantFragment">


        <Button
            android:id="@+id/bt_payment_summary_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="X"
            android:textAllCaps="false"
            android:textSize="25dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/black_round_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"></Button>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenant_payment"
            android:layout_margin="35dp"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"></TextView>


        <TextView
            android:id="@+id/tv_tenant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenant_name"
            android:layout_margin="35dp"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintLeft_toLeftOf="parent"></TextView>

        <EditText
            android:id="@+id/et_tenant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintTop_toBottomOf="@+id/tv_tenant_name"
            app:layout_constraintLeft_toLeftOf="parent"></EditText>

        <TextView
            android:id="@+id/tv_property_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/property_name"
            android:layout_margin="35dp"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/et_tenant_name"
            app:layout_constraintLeft_toLeftOf="parent"></TextView>

        <EditText
            android:id="@+id/et_property_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintTop_toBottomOf="@+id/tv_property_name"
            app:layout_constraintLeft_toLeftOf="parent"></EditText>

        <TextView
            android:id="@+id/tv_payment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:text="@string/payment_date"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            app:layout_constraintTop_toBottomOf="@+id/et_property_name"
            app:layout_constraintLeft_toLeftOf="parent"></TextView>

        <EditText
            android:id="@+id/et_payment_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/calender"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintTop_toBottomOf="@+id/tv_payment_date"
            app:layout_constraintLeft_toLeftOf="parent"></EditText>


        <TextView
            android:id="@+id/tv_deposit_paid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposit_paid"
            android:layout_margin="35dp"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/et_payment_date"
            app:layout_constraintLeft_toLeftOf="parent"></TextView>

        <EditText
            android:id="@+id/et_profession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:padding="8dp"
            android:inputType="numberDecimal"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintTop_toBottomOf="@+id/tv_deposit_paid"
            app:layout_constraintLeft_toLeftOf="parent"></EditText>


        <TextView
            android:id="@+id/tv_rental_fee_paid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rental_fee_paid"
            android:layout_margin="35dp"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/et_profession"
            app:layout_constraintLeft_toLeftOf="parent"></TextView>

        <EditText
            android:id="@+id/et_rental_fee_paid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:padding="8dp"
            android:inputType="numberDecimal"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintTop_toBottomOf="@+id/tv_rental_fee_paid"
            app:layout_constraintLeft_toLeftOf="parent"></EditText>


        <TextView
            android:id="@+id/tv_damage_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/damage_payment"
            android:layout_margin="35dp"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            app:layout_constraintTop_toBottomOf="@+id/et_rental_fee_paid"
            app:layout_constraintLeft_toLeftOf="parent"></TextView>

        <EditText
            android:id="@+id/et_damage_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:padding="8dp"
            android:inputType="numberDecimal"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintTop_toBottomOf="@+id/tv_damage_payment"
            app:layout_constraintLeft_toLeftOf="parent"></EditText>



        <Button
            android:id="@+id/bt_payment_save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/black_round_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_damage_payment"></Button>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
